# reddit2discord_memer

./: credentials.json  drive_main.py  main.py  meme_database.db  pyproject.toml  reddit.py  requirements.txt  script.py  twitter-keys  twitter.py
.credentials/: google-drive-credentials.json
