[tool.poetry]
name = "memer-bot"
version = "0.1.0"
description = ""
authors = ["Bharath Gowda"]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
praw = "^7.1.0"
google-auth-httplib2 = "^0.0.4"
google-api-python-client = "^1.10.0"
"discord.py" = "^1.4.1"
google-auth-oauthlib = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
